--- a/04_DOM/one.html
+++ b/04_DOM/one.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-   
+  <head>
+    <meta charset="UTF-8" />
+
     <title>DOM learning</title>
-</head>
-<body>
-   <div class="bg-black">
-        <h1 class = "heading">DOM learnign on Chai aur Code</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quae atque asperiores recusandae dignissimos autem earum, minima aliquid cum ipsa suscipit deserunt praesentium porro consectetur ut saepe ea reiciendis veritatis!</p>
-   </div> 
-</body>
+    <style>
+      .bg-black {
+        background-color: #212121;
+        color: #fff;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="bg-black">
+      <h1 class="heading" id="title">DOM learning on Chai aur Code</h1>
+      <h2>Lorem ipsum dolor.</h2>
+      <h2>Lorem ipsum dolor.</h2>
+      <h2>Lorem ipsum dolor.</h2>
+
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quae
+        atque asperiores recusandae dignissimos autem earum, minima aliquid cum
+      </p>
+    </div>
+  </body>
 </html>
