--- a/04_DOM/one.html
+++ b/04_DOM/one.html
@@ -22,6 +22,12 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quae
         atque asperiores recusandae dignissimos autem earum, minima aliquid cum
       </p>
+
+      <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+      </ul>
     </div>
   </body>
 </html>
